# oceanTACO

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml  publish-testpypi.yml
docs/: conf.py  dataset-ml-loader.md  dataset-workflows.md  dataset_description.md  dataset_generation.md  getting_started.md  index.md
docs/_static/: custom.css
docs/api/: dataset.md  index.md  queries.md  remote.md
docs/tutorials/: data_retrieval_workflows.ipynb  index.md  ml_dataset.ipynb  plot_hurricane_milton.ipynb  plot_hurricane_milton_cross_product.ipynb  spatio_temporal_query_generation.ipynb
ocean_taco/: __init__.py  test.py  test_benchmark.py  test_configs.py  test_datamodule.py  test_dataset.py  test_loading_speed.py  test_swot.py  test_tacotime.py
ocean_taco/dataset/: __init__.py  dataset.py  io_utils.py  queries.py  retrieve.py  utils.py
ocean_taco/generate_dataset/: __init__.py  build_taco.py  check_statistics.py  download.py  download_date_filters.py  download_sources.py  download_swot.py  download_tracker.py  encodings.py  format.py  format_constants.py  format_coords.py  format_dev_utils.py  format_encoding.py  format_gridding.py  format_loaders.py  format_processors.py  inventory.py  inventory_coverage.py  postprocess_wind.py  statistics.py
ocean_taco/viz/: plot_utils.py  readme_figure.py
ocean_taco/viz/analysis/: benchmark_results.py  benchmark_sample_retrieval.py  benchmark_taco.py  compression_loss.py  query_viz.py
ocean_taco/viz/paper/: __init__.py  figures.py  generate_taco_tables.py  ocean_taco_figure.py  plot_disk_saving_space.py  plot_hurricane_milton.py  plot_hurricane_milton_cross_product.py  plot_map_and_regions.py  plot_processing_levels.py  plot_regional_coupling.py  plot_spatial_correlations.py  plot_spatial_mosaic.py  plot_ssh_comparison.py  plot_ssh_cross_product.py  plot_ssh_spectral.py  plot_sst_sss_coupling.py  plot_validate_argo.py
